fixed location and category options not showing up on first opening of device/compositeItem editing window

--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -1,3 +1,7 @@
+::ng-deep .cdk-overlay-container {
+    z-index:2000;
+}
+
 .list-title {
     display: inline-block
 }
